<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fingit</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="background">bacgr</string>
    <string name="strBtnIniciar">Start</string>
    <string name="strRanking">Ranking</string>
    <string name="strStart">Start</string>
    <string name="strPuntos">0</string>
    <string name="strPuntuacion">Score:</string>
    <string name="syncServ">Syncronizar con servidor?</string>
    <string name="strOk">OK</string>
    <string name="strHash">Hash ID:</string>
    <string name="strEnemies">Enemigos</string>
    <string name="strEnemiesVa">0</string>

</resources>
