    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
 
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/background"
            android:scaleType="fitCenter"
            android:src="@drawable/fondo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="18dp"
                android:layout_marginTop="21dp"
                android:text="@string/strStart" />

            <Button
                android:id="@+id/btnRanking"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/btnStart"
                android:layout_below="@+id/btnStart"
                android:text="@string/strRanking" />

        </RelativeLayout>

    </FrameLayout>